# backend

./: README.md
atlas/: .gitignore  MANIFEST.in  README.md  makemigrations.py  runtests.py  setup.cfg  setup.py  tox.ini
atlas/scaife_viewer/atlas/: __init__.py  admin.py  apps.py  chunking_poc.py  compat.py  conf.py  constants.py  data_model.py  db_routers.py  hooks.py  ingestion_pipeline.py  language_utils.py  managers.py  models.py  parallel_tokenizers.py  passage.py  schema.py  tokenizers.py  urls.py  utils.py
atlas/scaife_viewer/atlas/exporters/: cex.py
atlas/scaife_viewer/atlas/extractors/: attributions.py
atlas/scaife_viewer/atlas/importers/: __init__.py  alignments.py  attributions.py  audio_annotations.py  dictionaries.py  image_annotations.py  metadata_collections.py  metrical_annotations.py  named_entities.py  repo_metadata.py  structured_metadata.py  text_annotations.py  tocs.py  token_annotations.py  treebanks.py  treebanks_gorman.py  treebanks_ud.py  versions.py
atlas/scaife_viewer/atlas/language_utils/: grc.py
atlas/scaife_viewer/atlas/migrations/: 0001_initial.py  0002_syntax_trees.py  0002_text_alignment_records.py  0003_syntax_trees.py  0004_citation_dictionary_dictionaryentry_sense.py  0004_concordance_entries.py  0004_dictionary_dictionaryentry_sense.py  0004_repo.py  0005_attributions.py  0005_concordance_entries.py  0005_dictionary_models.py  0005_dictionaryentry_headword_normalized.py  0006_dictionary_models.py  0007_hookset_for_text_annotation_kinds.py  0007_metadata.py  0008_metadata.py  0008_metadata_cts_relations.py  0008_metadata_value_obj.py  0008_named_entity_collection.py  0009_metadata_value_obj.py  0009_text_annotation_collection.py  0010_token_annotations.py  0011_add_entry_citations.py  0015_tocentry.py  (+10 more)
atlas/scripts/: lint.sh
core/: MANIFEST.in  README.md  makemigrations.py  runtests.py  setup.cfg  setup.py  tox.ini
core/scaife_viewer/: __init__.py
core/scaife_viewer/core/: __init__.py  apps.py  cli.py  cloud.py  conf.py  hooks.py  http.py  indexer.py  morphology.py  search.py  urls.py  utils.py  views.py
core/scripts/: lint.sh
cts_utils/tests/: README.md  conversion.py  copy_files.py  pyproject.toml  requirements.txt
(+52 files in other folders)
