[metadata]
long_description = file: README.md
long_description_content_type = text/markdown

[bdist_wheel]
universal = 1

[tool:pytest]
testpaths = scaife_viewer/core/tests
DJANGO_SETTINGS_MODULE = scaife_viewer.core.tests.settings
python_files = tests.py test_*.py *_tests.py
addopts = --hypothesis-show-statistics --cov-report term-missing:skip-covered --cov=scaife_viewer

[flake8]
ignore = E265,E501
max-line-length = 100
inline-quotes = double
exclude = **/migrations/*

[isort]
skip=node_modules,data
skip_glob=**/migrations/*.py
multi_line_output=3
known_django=django
known_djangocontrib=django.contrib
sections=FUTURE,STDLIB,DJANGO,DJANGOCONTRIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
lines_after_imports=2
