[metadata]
long_description = file: README.md
long_description_content_type = text/markdown

[bdist_wheel]
universal = 1

[tool:pytest]
testpaths = scaife_viewer/core/tests
DJANGO_SETTINGS_MODULE = scaife_viewer.core.tests.settings
python_files = tests.py test_*.py *_tests.py
addopts = --hypothesis-show-statistics --cov-report term-missing:skip-covered --cov=scaife_viewer
