[tool.poetry]
name = "scaife-viewer-cts-validators"
version = "0.1.0"
description = "Validators for CTS / CapiTans and Scaife Viewer"
authors = ["Jake Wegner <jake.wegner@signumu.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
pytest-xdist = "^3.3.1"
saxonche = "^12.3.0"

[tool.poetry.dev-dependencies]
lxml = "^4.9.1"
pytest = "^7.2.0"

[tool.poetry.group.dev.dependencies]
black = "^23.10.0"
isort = "^5.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
